<resources>
    <string name="app_name">TravelApp</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="cardid">Rejsekort number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="title_register">Create a new account</string>
    <string name="title_haveaccount">Already have an account?</string>
    <string name="title_login">Log in</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="from">From:</string>
    <string name="to">To:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="drawer_home">Home</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_account">Account</string>
    <string name="drawer_trips">Trips</string>
    <string name="drawer_logout">Logout</string>

    <string name="balance">Account Balance</string>
    <string name="deposit">Deposit</string>
    <string name="amount">Amount:</string>
    <string name="cancel">Cancel</string>
    <string name="transactions">Transactions</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_trip">Slide to start trip</string>
    <string name="end_trip">Slide to end trip</string>
    <string name="not_ready">Not ready...</string>
    <string name="trip_started">Your trip has started.</string>
    <string name="trip_ended">Your trip has ended.</string>
    <string name="dkk">DKK</string>

    <string name="progress_login">Logging in…</string>
    <string name="progress_register">Creating a new account…</string>
    <string name="progress_wait">Please wait…</string>

    <!-- Exception messages -->
    <string name="exc_already_active">Only one trip can be active at the time!</string>
    <string name="exc_no_active">No active trip found.</string>
    <string name="exc_location_unknown">Could not find any beacon in your area. Try again later.</string>
    <string name="exc_unknown_error">Unknown exception</string>
    <string name="exc_query_not_complete">Please wait, we are synchronizing your data</string>

</resources>
