<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/drawer_account" />
        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_trips"
            android:title="@string/drawer_trips" />
    </group>

    <item android:title="@string/drawer_logout">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/drawer_logout" />
        </menu>
    </item>

</menu>
