<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txt_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txt_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txt_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
