<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.itu.vongrad.travelapp.ProfileFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/empty_user" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_profile"
            android:layout_alignParentStart="true"
            android:id="@+id/textInputLayout1">

            <EditText
                android:id="@+id/edt_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:textColor="@color/colorDarkBlack" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout1"
            android:layout_alignParentStart="true"
            android:id="@+id/textInputLayout2">

            <EditText
                android:id="@+id/edt_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:textColor="@color/colorDarkBlack" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout2"
            android:layout_alignParentStart="true"
            android:id="@+id/textInputLayout3">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorDarkBlack" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout3"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/edt_cardid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cardid"
                android:inputType="number"
                android:textColor="@color/colorDarkBlack" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="265dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_rounded"
            android:text="@string/update"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>
</FrameLayout>
