<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.itu.vongrad.travelapp.AccountFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout"
            android:text="@string/transactions"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout">

            <EditText
                android:id="@+id/edt_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/balance"
                android:includeFontPadding="false"
                android:inputType="none"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:textAlignment="viewStart"
                android:textColor="@color/colorDarkBlack" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_transactions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_deposit"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_deposit"
            android:layout_width="265dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/button_rounded"
            android:text="@string/deposit"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

</FrameLayout>
